--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/swagger-ui-express": "^4.1.3",
     "babel-jest": "^29.4.1",
     "jest": "^29.4.1",
+    "nodemon": "^2.0.22",
     "supertest": "^6.2.4",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.8.2",
