--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "test": "tests"
   },
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "index.js",
   "author": "Ora digital <direction.hapy@gmail.com>",
   "license": "ISC",
   "repository": {
@@ -14,8 +14,8 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "tsc",
-    "dev": "nodemon src/server",
-    "start": "node dist/server.js",
+    "dev": "nodemon src/index",
+    "start": "node dist/index.js",
     "test": "jest",
     "test:watch": "jest"
   },
