--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "url": "git+https://github.com/Hapy06/Hapy-API.git"
   },
   "scripts": {
-    "postinstall": "yarn run build",
+    "postinstall": "npm run build",
     "prebuild": "rimraf dist",
-    "build": "npx tsc",
+    "build": "tsc",
     "dev": "nodemon src/server",
     "start": "node dist/server",
     "test": "jest",
