--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   },
   "version": "1.0.0",
   "main": "src/server.ts",
-  "author": "Ora digital <direction.hapy@gmail.com>",
+  "author": "Kentin & Simon",
   "license": "ISC",
   "repository": {
     "type": "git",
